# RaylibGame

./: .gitignore  .gitmodules  CMakeLists.txt  todo.md
.github/workflows/: check_formatting.yaml  run_tests.yaml
src/: main.cpp
src/core/: util.cpp  util.h
src/core/debug/: logging.cpp  logging.h
src/game/: game.cpp  game.h  resource.cpp  resource.h  scene.cpp  scene.h  ui.cpp  ui.h
src/game/scene/: gameplay.cpp  gameplay.h  main_menu.cpp  main_menu.h  scene.cpp  scene.h
src/platform/: lean_mean_windows.h  win32.cpp  win32.h  window.cpp  window.h
test/: dummy_tests.cpp  main.cpp  snapshots.cpp  snapshots.h  ui_interaction_tests.cpp  ui_layout_tests.cpp  ui_tests.cpp
